--- a/example-voting-app-kub/postgres-deployment.yml
+++ b/example-voting-app-kub/postgres-deployment.yml
@@ -7,8 +7,9 @@ metadata:
 spec:
   replicas: 1
   selector:
-    name: postgres-pod
-    app: demo-voting-app
+    matchLabels:
+      name: postgres-pod
+      app: demo-voting-app
   template:
     metadata:
       name: postgres-pod
